Release notes for xmlBlaster @version@ (http://www.xmlBlaster.org)

Changes for 0.xxx [xxxxxxxxxx]
==============================
 o Added support to set and lookup the engine.Global (via GlobalUtil) for the j2ee components.

 o Finished the LOCAL protocol.

 o Added flag enableBatchMode in the jdbc queue plugins

 o added storage of blob in DummyEntry (before it was a fictive size, now its complete size is stored/retrieved from the DB).
 o Moved to JacORB 2.0 beta 2 + (cvs) from 2003-09-14 15:00
   You can check out this version with:
    cvs -d :pserver:anonymous@www.jacorb.org/cvsroot/jacorb checkout -D '2003-09-14 15:00' JacORB
   idl.jar is patched to contain JacORB/lib/logkit.jar

 o Updated XPathFilter to support Jaxen XPath extension functions, also added the functions RecursiveTextFunction and ContainsIgnoreCaseFunction.

 o Updated j2ee components to the latest API changes. Also fixed property handling so that xmlBlaster.properties is not loaded by default. xmlBlaster.properties and xmlBlasterPlugins.xml is removed from the xmlBlaster.jar to not upset the propertyloading.

 o Changed ClassLoaderFactory to be interface based, now pluggable with property classLoaderFactory. Moved implementing ClassLoaderFactory to StandaloneClassLoaderFactory and added a ContextClassLoaderFactory to be used in certain embedded environments.

 o Bugfix in Timeout.java
   - userData is now correctly passed
   - addOrRefreshTimeoutListener() acts now correctly on all situations
   Reported by Xavier Roques, xRoques@infovista.com

 o Ported chess demo to batik 1.5, cleanup of event queue

 o Moved getJdbcQueueManagerCommonTable from util.Global to JdbcQueueCommonTablePlugin so that the 
   manager is not referenced outside the plugin it serves. Moved also wipeOutDB from Global to the
   queue plugin).

 o Property loading cleanup in Global.java 
   Thanks to Peter Antman for the discussion

 o Fixed build.xml 'dist' task to include HSQLDB
