@@ -6,7 +6,7 @@ Comment:   Parsing disconnect QoS
 ------------------------------------------------------------------------------*/
 package org.xmlBlaster.util.qos;
 
-import java.util.HashMap;
+import java.util.Map;
 
 import org.jutils.log.LogChannel;
 import org.xmlBlaster.util.Global;
@@ -167,7 +167,7 @@ public final class DisconnectQosSaxFactory extends org.xmlBlaster.util.XmlQoSBas
             sb.append(offset).append(" <clearSessions>").append(data.clearSessions()).append("</clearSessions>");
       }
 
-      HashMap map = data.getClientProperties();
+      Map map = data.getClientProperties();
       if (map != null && map.size() > 0) {
          Object[] keys = map.keySet().toArray();
          for (int i=0; i < keys.length; i++) {
