@@ -8,8 +8,6 @@ package org.xmlBlaster.util.qos.storage;
 import org.jutils.log.LogChannel;
 import org.xmlBlaster.util.Global;
 import org.xmlBlaster.util.enum.Constants;
-import org.xmlBlaster.util.property.PropEntry;
-import org.xml.sax.Attributes;
 
 /**
  * Helper class holding properties of the MsgUnit storage. 
